Fixed spacing of header items.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --offwhite: rgb(248, 248, 248);
     --offgray: rgb(214, 214, 214);
-    --sidebar: rgb(74, 104, 195);
+    --sidebar: rgb(72, 83, 116);
 }
 
 html, body {
@@ -28,6 +28,8 @@ button {
     grid-template-rows: 1fr 4fr;
 }
 
+/* Header Section*/
+
 .header {
     background-color: var(--offwhite);
     grid-area: 1 / 2 / 2 / 3;
@@ -35,6 +37,67 @@ button {
     grid-template-rows: 1fr 1fr;
     align-items: center;
 }
+
+.top {
+    border: 1px solid blue;
+    display: flex;
+    padding-left: 2rem;
+    padding-right: 4rem;
+}
+
+.search {
+    border: 1px solid green;
+    display: flex;
+    align-items: center;
+}
+
+.user {
+    border: 1px solid pink;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    gap: 1rem;
+}
+
+.profile-icon {
+    width: 2.5rem;
+    border-radius: 50%;
+    /*box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.233);*/
+}
+
+.bottom {
+    border: 1px solid red;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+button {
+    cursor: pointer;
+}
+
+.current-user{
+    border: 1px solid yellow;
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+    gap: 1rem;
+}
+
+.current-user .profile-icon {
+    width: 4rem;
+}
+
+.welcome {
+    border: 1px solid purple;
+}
+
+/* Sidebar Section*/
 
 .sidebar {
     background-color: var(--sidebar);
@@ -72,9 +135,6 @@ li {
     margin-bottom: 1rem;
     display: flex;
     align-items: center;
-}
-
-a:hover {
     cursor: pointer;
 }
 
@@ -83,40 +143,13 @@ a:hover {
     margin-right: 1rem;
 }
 
+/* Main-Content Section*/
+
 .main-content {
     border: 1px solid limegreen;
     background-color: var(--offgray);
     display: grid;
     grid-template-columns: 3fr 1fr;
-}
-
-.top {
-    border: 1px solid blue;
-    display: flex;
-    justify-content: space-around;
-    gap: 10px;
-}
-
-.bottom {
-    border: 1px solid red;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-.bottom .buttons {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.current-user{
-    border: 1px solid yellow;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-}
-
-.welcome {
-    border: 1px solid purple;
 }
 
 .project-container{
@@ -139,15 +172,5 @@ a:hover {
     border: 1px solid rgb(170, 33, 33);
     display: grid;
     grid-template-rows: 1fr 1fr;
-}
-
-.profile-icon {
-    width: 2.5rem;
-    border-radius: 50%;
-    /*box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.233);*/
-}
-
-.current-user .profile-icon {
-    width: 4rem;
 }
 
